--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -89,17 +89,30 @@
         </div>
     </div>
 
-    <!-- Модальне вікно з деталями заявки -->
     <div id="request-details-modal" class="modal">
         <div class="modal-content">
             <span class="close-btn request-details-close-btn">&times;</span>
-            <h2>Деталі заявки</h2>
             <div id="request-details">
                 <!-- Деталі заявки будуть завантажуватися динамічно -->
             </div>
-            <button id="approve-request-btn" class="approve-btn">Підтвердити заявку</button>
+            <div class="modal-buttons">
+                <button id="download-document-btn" class="action-btn download-btn">Завантажити документ</button>
+                <button id="approve-request-btn" class="action-btn approve-btn">Підтвердити заявку</button>
+                <button id="reject-request-btn" class="action-btn reject-btn">Відхилити заявку</button>
+            </div>
         </div>
     </div>
+    <!-- Модальне вікно для введення причини відмови -->
+    <div id="reject-reason-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn reject-reason-close-btn">&times;</span>
+            <h2>Введіть причину відмови</h2>
+            <textarea id="reject-reason-textarea" rows="4" placeholder="Причина відмови..."></textarea>
+            <button id="submit-reject-reason-btn">Відхилити заявку</button>
+        </div>
+    </div>
+
+
 
     <!-- Toast повідомлення -->
     <div id="toast" class="toast">
