fix bugs, added notification status and added some changes

--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -33,7 +33,7 @@
 <!-- Героїчна секція -->
 <section class="hero">
     <div class="hero-content">
-        <h1>Ласкаво просимо, <span class="user-name">[Ім'я адміністратора]</span></h1>
+        <h1><span class="user-name">Адмін панель</span></h1>
         <p>Тут ви можете керувати заявками біженців та підтверджувати їх для волонтерів.</p>
     </div>
 </section>
@@ -108,7 +108,7 @@
             <span class="close-btn reject-reason-close-btn">&times;</span>
             <h2>Введіть причину відмови</h2>
             <textarea id="reject-reason-textarea" rows="4" placeholder="Причина відмови..."></textarea>
-            <button id="submit-reject-reason-btn">Відхилити заявку</button>
+            <button id="submit-reject-reason-btn" class="action-btn reject-btn">Відхилити заявку</button>
         </div>
     </div>
 
