--- a/src/main/resources/static/refugee.html
+++ b/src/main/resources/static/refugee.html
@@ -350,7 +350,7 @@
     <!-- Попап для отображения последних 5 уведомлений -->
     <div id="notification-popup" class="popup">
         <div class="popup-header">
-            <h3>Уведомления</h3>
+            <h3>Сповіщення</h3>
             <button id="close-popup" class="close-popup"><i class="fas fa-times"></i></button>
         </div>
         <div id="popup-notifications" class="popup-notifications">
