--- a/src/main/resources/static/application.html
+++ b/src/main/resources/static/application.html
@@ -189,11 +189,30 @@
             <label for="reg-city">Місто в Україні:</label>
             <select id="reg-city" name="city" required>
                 <option value="" disabled selected>Виберіть місто</option>
+                <option value="Вінниця">Вінниця</option>
+                <option value="Дніпро">Дніпро</option>
+                <option value="Донецьк">Донецьк</option>
+                <option value="Житомир">Житомир</option>
+                <option value="Запоріжжя">Запоріжжя</option>
+                <option value="Івано-Франківськ">Івано-Франківськ</option>
                 <option value="Київ">Київ</option>
+                <option value="Кропивницький">Кропивницький</option>
+                <option value="Луганськ">Луганськ</option>
+                <option value="Луцьк">Луцьк</option>
                 <option value="Львів">Львів</option>
+                <option value="Миколаїв">Миколаїв</option>
                 <option value="Одеса">Одеса</option>
+                <option value="Полтава">Полтава</option>
+                <option value="Рівне">Рівне</option>
+                <option value="Суми">Суми</option>
+                <option value="Тернопіль">Тернопіль</option>
+                <option value="Ужгород">Ужгород</option>
                 <option value="Харків">Харків</option>
+                <option value="Херсон">Херсон</option>
+                <option value="Хмельницький">Хмельницький</option>
                 <option value="Черкаси">Черкаси</option>
+                <option value="Чернівці">Чернівці</option>
+                <option value="Чернігів">Чернігів</option>
             </select>
 
             <label for="reg-birth-date">Дата народження:</label>
